# topdownshooter

./: .gitignore  CMakeLists.txt  topdown.sln  topdown.vcxproj
include/ugdk/: action.h  graphic.h  time.h
include/ugdk/action/: scene.h
include/ugdk/base/: engine.h
include/ugdk/config/: config.h
include/ugdk/graphic/: spritesheet.h  texture.h
include/ugdk/graphic/drawable/: shape.h  solidrectangle.h  sprite.h  text.h  texturedrectangle.h
include/ugdk/graphic/spritesheet/: flexiblespritesheet.h
lib/: .gitignore
src/: .gitignore  CMakeLists.txt  game.h  main.cc  src_list.cmake
src/game/: component.h  gamecontroller.cc  gamecontroller.h  gameobject.cc  gameobject.h  gamescene.cc  gamescene.h
src/game/builder/: controllerbuilder.cc  controllerbuilder.h  objectbuilder.cc  objectbuilder.h  scenebuilder.cc  scenebuilder.h
src/game/component/: aicontroller.cc  aicontroller.h  controller.cc  controller.h  damageable.cc  damageable.h  graphic.cc  graphic.h  idlecontroller.h  physics.cc  physics.h  playercontroller.cc  playercontroller.h
